changed name of jpg file on index page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="jumbotron text-center">
       <h1 class="display-4">Welcome to My Portfolio</h1>
       <hr class="my-4">
-    <img src="./assets/images/I AM.jpg" alt="symbol of fluidity">
+    <img src="./assets/images/i AM.jpg" alt="symbol of fluidity">
         <div class="row">
                 <div class="col">
                     <div class="Einstein">
