changed name of images

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
-                <img src="./assets/images/NoteTakerImage.png" class="card-img-top" alt="Screenshot of NoteTaker Application">
+                <img src="./assets/images/noteTakerImage.png" class="card-img-top" alt="Screenshot of NoteTaker Application">
                 <div class="card-body">
                   <h5 class="card-title">Note Taker</h5>
                   <p class="card-text">This application is designed to write, save, and delete notes.</p>
@@ -67,7 +67,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="./assets/images/GoodREADME.png" class="card-img-top" alt="Screenshot of GoodREADME Application">
+                <img src="./assets/images/goodREADME.png" class="card-img-top" alt="Screenshot of GoodREADME Application">
                 <div class="card-body">
                   <h5 class="card-title">Good README Generator</h5>
                   <p class="card-text">A command line application that dynamically generates a professional README.md from a user's input.</p>
@@ -89,8 +89,8 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card h-100">
-                  <img src="./assets/images/TeamProfileGenerator.gif" class="card-img-top" alt="Demonstration of Application">
-                  <img src="./assets/images/TeamWebpage.png" class="card-img-top" alt="Screenshot of generated webpage">
+                  <img src="./assets/images/teamProfileGenerator.gif" class="card-img-top" alt="Demonstration of Application">
+                  <img src="./assets/images/teamWebpage.png" class="card-img-top" alt="Screenshot of generated webpage">
                   <div class="card-body">
                     <h5 class="card-title">Team Profile Generator</h5>
                     <p class="card-text">This project uses a Node Command Line Interface that records information about employees at a software engineering company and generates an HTML webpage that reflects the information for each employee.</p>
@@ -104,7 +104,7 @@
               <br></br>
               <div class="col">
                   <div class="card h-100">
-                    <img src="./assets/images/PandemicPasttime.png" class="card-img-top" alt="Screenshot of Application">
+                    <img src="./assets/images/pandemicPasttime.png" class="card-img-top" alt="Screenshot of Application">
                     <div class="card-body">
                       <h5 class="card-title">Pandemic PastTime</h5>
                       <p class="card-text">This application allows user's to input ingredients or items in their fridge while under quarantine that are used to generate recipes with wine pairings.</p>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col">
                   <div class="card h-100">
-                    <img src="./assets/images/Covidata.PNG" class="card-img-top" alt="Screenshot of application">
+                    <img src="./assets/images/covidata.PNG" class="card-img-top" alt="Screenshot of application">
                     <div class="card-body">
                       <h5 class="card-title">COVID-19 Tracking App</h5>
                       <p class="card-text">This application tracks COVID-19 data in each state of the United States.</p>
