added javascript tags, eliminated rows for project cards and team projects button; added text for scroll animation

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,23 +49,24 @@
         </div>
         
 
-    <div class="container text-center">
-        <div class="row">
+    <div class="text-center">
+      <h1 class="display-4">Scroll to see projects</h1>
+      <br>
+    </div>
 
-        </div>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
                 <img src="./assets/images/noteTakerImage.png" class="card-img-top" alt="Screenshot of NoteTaker Application">
-                <div class="card-body">
-                  <h5 class="card-title">Note Taker</h5>
-                  <p class="card-text">This application is designed to write, save, and delete notes.</p>
-                  <a href="https://github.com/cljeanpierre/NoteTaker" URL> GitHub Repo </a>
-                  <br></br>
-                  <a href="https://lit-taiga-83463.herokuapp.com/" URL>Deployed Application</a>
-                </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Note Taker</h5>
+                    <p class="card-text">This application is designed to write, save, and delete notes.</p>
+                    <a href="https://github.com/cljeanpierre/NoteTaker" URL> GitHub Repo </a>
+                    <br></br>
+                    <a href="https://lit-taiga-83463.herokuapp.com/" URL>Deployed Application</a>
+                  </div>
               </div>
             </div>
+
             <div class="col">
               <div class="card h-100">
                 <img src="./assets/images/goodREADME.png" class="card-img-top" alt="Screenshot of GoodREADME Application">
@@ -76,6 +77,7 @@
                 </div>
               </div>
             </div>
+
             <div class="col">
               <div class="card h-100">
                 <img src="./assets/images/employee-tracker.gif" class="card-img-top" alt="Sample demonstration of application">
@@ -86,8 +88,8 @@
                 </div>
               </div>
             </div>
-        </div>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+
+
             <div class="col">
                 <div class="card h-100">
                   <img src="./assets/images/teamProfileGenerator.gif" class="card-img-top" alt="Demonstration of Application">
@@ -99,10 +101,11 @@
                   </div>
                 </div>
               </div>
+
               <br></br>
               <br></br>
-              <button type="button" class="btn btn-secondary btn-lg btn-block">Team Projects</button></a>
-              <br></br>
+
+
               <div class="col">
                   <div class="card h-100">
                     <img src="./assets/images/pandemicPasttime.png" class="card-img-top" alt="Screenshot of Application">
@@ -115,6 +118,7 @@
                     </div>
                   </div>
                 </div>
+                
                 <div class="col">
                   <div class="card h-100">
                     <img src="./assets/images/covidata.PNG" class="card-img-top" alt="Screenshot of application">
@@ -127,8 +131,8 @@
                     </div>
                   </div>
                 </div>
-        </div>
-     </div>
+
+
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
