added a box class to each card and styling code for box on stylesheet

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,9 +53,9 @@
       <h1 class="display-4">Scroll to see projects</h1>
       <br>
     </div>
-
+    <br>
             <div class="col">
-              <div class="card h-100">
+              <div class="box card h-100">
                 <img src="./assets/images/noteTakerImage.png" class="card-img-top" alt="Screenshot of NoteTaker Application">
                   <div class="card-body">
                     <h5 class="card-title">Note Taker</h5>
@@ -67,8 +67,10 @@
               </div>
             </div>
 
+            <br>
+
             <div class="col">
-              <div class="card h-100">
+              <div class="box card h-100">
                 <img src="./assets/images/goodREADME.png" class="card-img-top" alt="Screenshot of GoodREADME Application">
                 <div class="card-body">
                   <h5 class="card-title">Good README Generator</h5>
@@ -78,8 +80,10 @@
               </div>
             </div>
 
+            <br>
+
             <div class="col">
-              <div class="card h-100">
+              <div class="box card h-100">
                 <img src="./assets/images/employee-tracker.gif" class="card-img-top" alt="Sample demonstration of application">
                 <div class="card-body">
                   <h5 class="card-title">Employee Management System</h5>
@@ -89,9 +93,10 @@
               </div>
             </div>
 
+            <br>
 
             <div class="col">
-                <div class="card h-100">
+                <div class="box card h-100">
                   <img src="./assets/images/teamProfileGenerator.gif" class="card-img-top" alt="Demonstration of Application">
                   <img src="./assets/images/teamWebpage.png" class="card-img-top" alt="Screenshot of generated webpage">
                   <div class="card-body">
@@ -102,12 +107,10 @@
                 </div>
               </div>
 
-              <br></br>
-              <br></br>
-
+              <br>
 
               <div class="col">
-                  <div class="card h-100">
+                  <div class="box card h-100">
                     <img src="./assets/images/pandemicPasttime.png" class="card-img-top" alt="Screenshot of Application">
                     <div class="card-body">
                       <h5 class="card-title">Pandemic PastTime</h5>
@@ -118,9 +121,11 @@
                     </div>
                   </div>
                 </div>
-                
+
+                <br>
+
                 <div class="col">
-                  <div class="card h-100">
+                  <div class="box card h-100">
                     <img src="./assets/images/covidata.PNG" class="card-img-top" alt="Screenshot of application">
                     <div class="card-body">
                       <h5 class="card-title">COVID-19 Tracking App</h5>
@@ -133,10 +138,9 @@
                 </div>
 
 
-
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
