added code to center columns after scrolling animation effect

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       <br>
     </div>
     <br>
-            <div class="col">
+            <div class="col d-flex justify-content-center text-center">
               <div class="box card h-100">
                 <img src="./assets/images/noteTakerImage.png" class="card-img-top" alt="Screenshot of NoteTaker Application">
                   <div class="card-body">
@@ -69,7 +69,7 @@
 
             <br>
 
-            <div class="col">
+            <div class="col d-flex justify-content-center text-center">
               <div class="box card h-100">
                 <img src="./assets/images/goodREADME.png" class="card-img-top" alt="Screenshot of GoodREADME Application">
                 <div class="card-body">
@@ -82,7 +82,7 @@
 
             <br>
 
-            <div class="col">
+            <div class="col d-flex justify-content-center text-center">
               <div class="box card h-100">
                 <img src="./assets/images/employee-tracker.gif" class="card-img-top" alt="Sample demonstration of application">
                 <div class="card-body">
@@ -95,7 +95,7 @@
 
             <br>
 
-            <div class="col">
+            <div class="col d-flex justify-content-center text-center">
                 <div class="box card h-100">
                   <img src="./assets/images/teamProfileGenerator.gif" class="card-img-top" alt="Demonstration of Application">
                   <img src="./assets/images/teamWebpage.png" class="card-img-top" alt="Screenshot of generated webpage">
@@ -109,7 +109,7 @@
 
               <br>
 
-              <div class="col">
+              <div class="col d-flex justify-content-center text-center">
                   <div class="box card h-100">
                     <img src="./assets/images/pandemicPasttime.png" class="card-img-top" alt="Screenshot of Application">
                     <div class="card-body">
@@ -124,7 +124,7 @@
 
                 <br>
 
-                <div class="col">
+                <div class="col d-flex justify-content-center text-center">
                   <div class="box card h-100">
                     <img src="./assets/images/covidata.PNG" class="card-img-top" alt="Screenshot of application">
                     <div class="card-body">
