--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
             <div class="col d-flex justify-content-center text-center">
               <div class="box card h-100">
                 <img src="./assets/images/noteTakerImage.png" class="card-img-top" alt="Screenshot of NoteTaker Application">
-                  <div class="card-body">
+                  <div class="text-center card-body">
                     <h5 class="card-title">Note Taker</h5>
                     <p class="card-text">This application is designed to write, save, and delete notes.</p>
                     <a href="https://github.com/cljeanpierre/NoteTaker" URL> GitHub Repo </a>
@@ -72,7 +72,7 @@
             <div class="col d-flex justify-content-center text-center">
               <div class="box card h-100">
                 <img src="./assets/images/goodREADME.png" class="card-img-top" alt="Screenshot of GoodREADME Application">
-                <div class="card-body">
+                <div class="text-center card-body">
                   <h5 class="card-title">Good README Generator</h5>
                   <p class="card-text">A command line application that dynamically generates a professional README.md from a user's input.</p>
                   <a href="https://github.com/cljeanpierre/NoteTaker" URL> GitHub Repo </a>
@@ -85,7 +85,7 @@
             <div class="col d-flex justify-content-center text-center">
               <div class="box card h-100">
                 <img src="./assets/images/employee-tracker.gif" class="card-img-top" alt="Sample demonstration of application">
-                <div class="card-body">
+                <div class="text-center card-body">
                   <h5 class="card-title">Employee Management System</h5>
                   <p class="card-text">A Content Management System that designed to help a company manage its employees using Nodejs, Inquirer, and MySQL.</p>
                   <a href="https://github.com/cljeanpierre/Employee-Tracker" URL>GitHub Repo</a>
@@ -99,7 +99,7 @@
                 <div class="box card h-100">
                   <img src="./assets/images/teamProfileGenerator.gif" class="card-img-top" alt="Demonstration of Application">
                   <img src="./assets/images/teamWebpage.png" class="card-img-top" alt="Screenshot of generated webpage">
-                  <div class="card-body">
+                  <div class="text-center card-body">
                     <h5 class="card-title">Team Profile Generator</h5>
                     <p class="card-text">This project uses a Node Command Line Interface that records information about employees at a software engineering company and generates an HTML webpage that reflects the information for each employee.</p>
                     <a href="https://github.com/cljeanpierre/Template-Engine---Employee-Summary" URL>GitHub Repo</a>
@@ -112,7 +112,7 @@
               <div class="col d-flex justify-content-center text-center">
                   <div class="box card h-100">
                     <img src="./assets/images/pandemicPasttime.png" class="card-img-top" alt="Screenshot of Application">
-                    <div class="card-body">
+                    <div class="text-center card-body">
                       <h5 class="card-title">Pandemic PastTime</h5>
                       <p class="card-text">This application allows user's to input ingredients or items in their fridge while under quarantine that are used to generate recipes with wine pairings.</p>
                       <a href="https://github.com/cljeanpierre/Pandemic-Pastime" URL>GitHub Repo</a>
@@ -127,7 +127,7 @@
                 <div class="col d-flex justify-content-center text-center">
                   <div class="box card h-100">
                     <img src="./assets/images/covidata.PNG" class="card-img-top" alt="Screenshot of application">
-                    <div class="card-body">
+                    <div class="text-center card-body">
                       <h5 class="card-title">COVID-19 Tracking App</h5>
                       <p class="card-text">This application tracks COVID-19 data in each state of the United States.</p>
                       <a href="https://github.com/cljeanpierre/Project-2" URL>GitHub Repo</a>
