--- a/portfolio.html
+++ b/portfolio.html
@@ -50,10 +50,11 @@
         
 
     <div class="text-center">
-      <h1 class="display-4">Scroll to see projects</h1>
+      <h1 class="display-4"> Scroll to see projects</h1>
       <br>
     </div>
     <br>
+    <div class="container" style="background-color: #e3f2fd">
             <div class="col d-flex justify-content-center text-center">
               <div class="box card h-100">
                 <img src="./assets/images/noteTakerImage.png" class="card-img-top" alt="Screenshot of NoteTaker Application">
@@ -136,7 +137,7 @@
                     </div>
                   </div>
                 </div>
-
+            </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
