--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
 <title>Contact Me</title>
 </head>
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+  
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #7f919e;">
         <a class="navbar-brand" href="index.html">My Portfolio - Carla Jeanpierre</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -20,13 +20,13 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link navColor" href="index.html">About Me</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="portfolio.html">My Projects</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="contact.html">Contact Info<span class="sr-only">(current)</span></a>
             </li>
           </ul>
