added a link as an option for message writers to return to home page

--- a/thankyou.html
+++ b/thankyou.html
@@ -20,6 +20,13 @@
       </nav>
 
     <div class="jumbotron text-center">
-    <div class="container">
-      <h1 class="display-4">Thank You for Visiting My Portfolio!</h1>
+      <div class="container">
+        <h1 class="display-4">Thank You for Visiting My Portfolio!</h1>
+        <br>
+        <br>
+        <a href='./index.html' style='text-decoration: underline;'>Return to Home Page</a>
+      </div>
+    </div>
+
+
 </body>
