--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
               <input type="text" name="name" placeholder="Your Full Name" class="form-control" required>
               <input type="email" name="email" style="margin-top:20px" placeholder="Your Email" class="form-control" required>
               <label for="message" style="margin-top: 20px;">Message</label>
-              <textarea id="message" name="message" rows="10" col="10" class="form-control" required>Write your message here...</textarea>
+              <textarea id="message" name="message" rows="10" col="10" class="form-control" required>Write your messasge here...</textarea>
               <button type="submit" style="margin-top: 20px;" class="btn btn-primary">Send Message</button>
               <input type="hidden" name="_next" value="https://cljeanpierre.github.io/MyPortfolio/thankyou.html">
             </form>                        
