--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
       <h1 class="display-4">Contact Me</h1>
       <hr class="my-4">
         <div class="row">
-          <div class="col-6">
-            <table class="table">
+          <div class="col-10">
+            <table class="table" >
               <tr>
                 <th>Name</th>
                 <td>Carla Jeanpierre</td>
@@ -63,6 +63,9 @@
               </tr>
             </table>
           </div>
+      </div>
+    </div>
+</div>
 
           <div class="col-6">
             <form action="https://formsubmit.co/carlatresejeanpierre@gmail.com" method="POST"> 
@@ -74,9 +77,9 @@
               <input type="hidden" name="_next" value="https://cljeanpierre.github.io/MyPortfolio/thankyou.html">
             </form>                        
           </div>
-        </div>      
+        <!-- </div>      
     </div>    
-  </div>
+  </div> -->
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
