Open a new page for updated resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
             <hr class="my-4">
             <p class="lead">Click on the links to explore!</p>
             <br>
-              <a href="assets/documents/resume.pdf"><button type="button" class="btn btn-secondary btn-lg btn-block">My Resume</button></a>
+              <a href="assets/documents/resume.pdf" target="_blank"><button type="button" class="btn btn-secondary btn-lg btn-block">My Resume</button></a>
               <br>
               <a href="http://www.linkedin.com/in/carla-jeanpierre-304021154" target="_blank"><button type="button" class="btn btn-secondary btn-lg btn-block">LinkedIn Profile</button></a>
               <br>
