updated biography on main page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>About Me</title>
-</head>
+ <head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <meta name="Description" content="Enter your description here"/>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+   <link rel="stylesheet" href="assets/css/style.css">
+  <title>About Me</title>
+ </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
@@ -37,22 +37,33 @@
       <h1 class="display-4">Welcome to My Portfolio</h1>
       <hr class="my-4">
     <img src="./assets/images/i AM.jpg" alt="symbol of fluidity">
-        <div class="row">
-                <div class="col">
-                    <div class="Einstein">
-                    <p>“I am enough of an artist to draw freely upon my imagination. Imagination is more important than knowledge. Knowledge is limited. Imagination encircles the world.”
-                        ― Albert Einstein</p>
-                    </div>    
-                </div>
+      <div class="row">
+        <div class="col">
+          <div class="Einstein">
+            <p>“I am enough of an artist to draw freely upon my imagination. 
+                Imagination is more important than knowledge. Knowledge is limited. 
+                Imagination encircles the world.”
+                ― Albert Einstein
+            </p>
+          </div>    
         </div>
-    </div>
+       </div>
+     </div>
 
     <div class="card-deck">
         <div class="card">
           <img class="card-img-top img-fluid" src="./assets/images/mother.jpg" alt="Mother and child photo">
           <div class="card-body">
             <h5 class="card-title text-center">A Mother</h5>
-            <p class="card-text">I became a mother for the first time on September 5, 2018 when I gave birth to my loving son, Mosiah.  He is my everything, and I love being a parent.  He motivates me to become a better person - healthier, smarter, more patient and more compassionate.</p>
+            <p class="card-text">
+              I became a mother for the first time on September 5, 2018 when I gave birth to my loving son, Mosiah.  
+              He is my everything, and I love being a parent.  Two years ago, Mosiah was diagnosed with autism.  My
+              dream is to ensure that he has a wonderful educational experience in an environment that appreciates his 
+              unique learning style and abilities.  He is part of the reason I have decided to change careers and commit
+              myself to building computer applications.  Mosiah is fascinated with all things technological and so am I.
+              In this way and in so many others, Mosiah motivates me to be a better person - healthier, smarter, more patient,
+              kind and compassionate.
+            </p>
           </div>
         </div>
 
@@ -60,7 +71,30 @@
           <img class="card-img-top img-fluid" src="./assets/images/software developer.jpg" alt="Computer image showing code on screen">
           <div class="card-body">
             <h5 class="card-title text-center">A Software Developer</h5>
-            <p class="card-text">What started as a hobby has now become a dream career! I am a life-long learner, and the learning never stops when it comes to coding.  In just a matter of weeks, I've learned more terminology and techniques for building websites than I ever could have imagined. I am sure to learn much more as a Coding Bootcamp student, and I can't wait to become a more integral member of the coding community when I enter the workforce. I look forward to discovering all the other magical things that can be done with computers and computer software.</p>
+            <p class="card-text">
+              My first college major was computer science.  Since I first saw computers on television, and then 
+              finally in person, a small box monitor isolated on a desk in an otherwise empty room, I'd been curious
+              about what was said to be the endless potential of these popular devices now more readily available 
+              for public purchase and use. I was elated when my parents bought me and my siblings a Commodore 64.  
+              We would take turns typing out a program in the back of the computer's manual, and I was mesmerized by
+              what seemed like magic produced by this machine. I was amazed to learn that these seemingly 
+              powerful machines could accomplish nothing without the human mind and its imagination.
+              <br>
+              <br>
+              But just out of high school, I was very shy and intimidated by those around me who were much more 
+              familiar with the Linux operating system and could display webpages on Netscape Navigator with 
+              impressive adeptness.  Although I changed majors and went on to become a professional writer and 
+              teacher for more than 10 years, my curiousity about computers never waned and my willingness to become
+              self-taught blossomed.  Teaching taught me to never be afraid to ask questions. I first started writing 
+              programs in HTML and CSS about 6 years ago when I met a fellow teacher who was seeking a career change.
+              He's now a Director of Engineering for an established company and has been a trusted mentor ever since.
+              <br>
+              <br>
+              I enrolled in a Coding Bootcamp at George Washington University two years ago and began writing full
+              stack web applications.  Coding has provided me a landscape of opportunities to learn many more 
+              programming languages, algorithms, and all things computer science.  I have come full circle and now have the tools to assist
+              in technological advancement and to join others in changing the world.
+            </p>
           </div>
         </div>
 
@@ -68,14 +102,19 @@
           <img class="card-img-top img-fluid" src="./assets/images/writer.jpg" alt="Picture of pen in hand">
           <div class="card-body">
             <h5 class="card-title text-center">A Writer</h5>
-            <p class="card-text">Writing gives me peace and liberation.  It's something I've done since I was a child.  Creating plots, characters, and acting them out on stage is emotionally rewarding.  To date, I've edited three books of poetry and stories written by young children.</p>
+            <p class="card-text">Writing gives me peace and liberation.  
+              It's something I've done since I was a child.  Creating plots, characters, and acting them out on 
+              stage is emotionally rewarding.  To date, I've edited three books of poetry and stories written by 
+              young children.  Although writing is no longer a career choice, it is something I enjoy thoroughly 
+              in my spare time.
+            </p>
           </div>
         </div>
       </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
